basalt/src/snapshots/basalt_tui__toast__tests__error.snap
---
source: basalt/src/toast.rs
expression: terminal.backend()
---
"          ╭──────────────────────────────────────╮"
"          │ ✗ Failed to save file                │"
"          ╰──────────────────────────────────────╯"
