basalt/src/snapshots/basalt_tui__toast__tests__warning.snap
---
source: basalt/src/toast.rs
expression: terminal.backend()
---
"          ╭──────────────────────────────────────╮"
"          │ ⚠ Unsaved changes                    │"
"          ╰──────────────────────────────────────╯"
